--- a/HTML-basics.html
+++ b/HTML-basics.html
@@ -55,6 +55,8 @@
     
     <img src="http://personal.psu.edu/xqz5228/jpg.jpg" alt="blog writing">
 
+    <img src="C:\Users\chaud\OneDrive\Desktop\images\octopus.png" alt="">
+
     <a href="https://www.google.com"><img src="http://personal.psu.edu/xqz5228/jpg.jpg" alt="blog writing"></a>
 
 
